fix broken style

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -7,6 +7,9 @@ section {
 
 main {
   padding: 40px 40px 0;
+  max-width: 1200px;
+  margin: 0 auto;
+  width: 100%;
 }
 
 h1, h2, h3, h4, h5, h6 {
